# emily.mcp.tools

./: .gitignore  README.md  TEST_README.md  WORKFLOW_TRIGGER_UPDATE.md  ai_extraction.py  automation_engine.py  color.py  configure.sh  core.py  dev.sh  example_ai_extraction.py  intelligent_search.py  intelligent_search_mcp.py  main.py  migration.py  migration_cli.py  models.py  natural_query.py  pyproject.toml  run_tests.py  schema.sql  server-info.json  server.py  smart_suggestions.py  start.sh  test_automation_tool.py  test_core.py  test_knowledge_graph.py  test_migration.py  test_migration_cli.py  test_phase2_1.py  test_unified_mcp.py  unified.py  workflow_actions.py  workflow_dsl.py  workflow_suggester.py
analysis/: __init__.py
analysis/prompts/: README.md  phase1_foundation.md  phase2_metrics.md  phase3_language_support.md  progress_tracker.json
common/: BaseTool.py
core/: __init__.py  database.py  memory.py  models.py
data/: memory.db
docs/: AI_AGENT_INTEGRATION_GUIDE.md  FASTMCP_COMPOSITION_GUIDE.md  FASTMCP_MIGRATION_SUMMARY.md  SMART_WORKFLOWS_GUIDE.md  api_reference.md  architecture.md  migration_guide.md
docs/mcp-doc-generator/: extract_mcp_info.py  generate_individual_tool_files.py
emily_common/: README.md  __init__.py  base_tool.py  pyproject.toml
emily_core/: README.md  __init__.py  memory.py  pyproject.toml
intelligence/: __init__.py  ai_extraction.py  intelligence_server.py  natural_query.py  search.py  search_mcp.py  smart_suggestions.py
mcp-docs/mcp_tools/: README.md  automation_approve_workflow_suggestion.md  automation_delete_workflow.md  automation_list_runs.md  automation_list_workflows.md  automation_pause_workflow.md  automation_register_workflow.md  automation_resume_workflow.md  get_cross_domain_insights.md  get_expertise_map.md  graph_create_entity.md  graph_create_relation.md  graph_delete_entity.md  graph_find_related.md  graph_get_centrality.md  graph_shortest_path.md  handoff_insights.md  handoff_save.md  handoff_suggest_actions.md  intelligent_search.md  intent_based_search.md  natural_query.md  search_with_context.md  todo_complete_task.md  (+9 more)
migration/: __init__.py  cli.py  manager.py
servers/: composition_examples.py
tests/: README.md  test_ai_extraction.py  test_analysis.py  test_async_tasks.py  test_automation_tool.py  test_calendar.py  test_codebase_tool.py  test_core.py  test_handoff.py  test_intelligence.py  test_knowledge_graph.py  test_knowledgebase.py  test_memory_graph.py  test_migration.py  test_migration_cli.py  test_models.py  test_phase1_1.py  test_phase2_1.py  test_time_service.py  test_todo.py  test_unified_handoff_tool.py  test_unified_todo_tool.py  test_vec0_integration.py  test_workflow_integration.py
tools/: __init__.py  base.py  common_types.py
utils/: __init__.py
workflows/: __init__.py  actions.py  dsl.py  engine.py  suggester.py
(+58 files in other folders)
