[project]
name = "emily-tools"
version = "0.1.0"
description = "Collection of tools under a single MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "pydantic>=2.0.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "pytest-asyncio>=1.1.0",
    "spacy>=3.8.7",
    "pip>=25.1.1",
    "aiohttp>=3.12.14",
    "coloredlogs>=15.0.1",
    "fastmcp>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
